--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
 This should work
+<script src="https://use.typekit.net/ciw4mya.js"></script>
+holla at me
+<script>try{Typekit.load({ async: true });}catch(e){}</script>
