--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-This should work
-<script src="https://use.typekit.net/ciw4mya.js"></script>
-holla at me
-<script>try{Typekit.load({ async: true });}catch(e){}</script>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
+
+</body>
+</html>
