--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
 
+	
+	
+<script src="https://use.typekit.net/ciw4mya.js"></script>
+<script>try{Typekit.load({ async: true });}catch(e){}</script>
+
 </body>
 </html>
