--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
-
+<font face="futura" color="green">This is some text!</font>
 	
 	
 <script src="https://use.typekit.net/ciw4mya.js"></script>
