--- a/assets/breaching.html
+++ b/assets/breaching.html
@@ -180,7 +180,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="FOR-5499-INTERNAL-USE-ONLY!">FOR 5499 INTERNAL USE ONLY!<a class="anchor-link" href="#FOR-5499-INTERNAL-USE-ONLY!">&#182;</a></h1><h1 id="A-case-for-breaching">A case for breaching<a class="anchor-link" href="#A-case-for-breaching">&#182;</a></h1><h3 id="Arani-(Ron)-Bhattacharyay">Arani (Ron) Bhattacharyay<a class="anchor-link" href="#Arani-(Ron)-Bhattacharyay">&#182;</a></h3>
+<h1 id="FOR-5499-INTERNAL-USE-ONLY!">FOR 5499 INTERNAL USE ONLY!<a class="anchor-link" href="#FOR-5499-INTERNAL-USE-ONLY!">&#182;</a></h1><h1 id="A-case-for-breaching">A Case for Breaching<a class="anchor-link" href="#A-case-for-breaching">&#182;</a></h1><h3 id="Arani-(Ron)-Bhattacharyay">Arani (Ron) Bhattacharyay<a class="anchor-link" href="#Arani-(Ron)-Bhattacharyay">&#182;</a></h3>
 </div>
 </div>
 </div>
@@ -215,7 +215,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>This year presents a really interesting situation where for the first time in more than a decade, the record of field play potentially can make up only HALF of the available ranking points! This means emperically that just by weight there's as much of an incentive to make an aggressive effort to win your match than to complete given tasks. Even though those two seem the same, it might beckon a look at if that's really the case!</p>
+<p>This year presents a really interesting situation where for the first time in more than a decade, the record of field play only makes up HALF of the available ranking points! This means emperically that just by weight there's as much of an incentive to make an aggressive effort to win your match than to complete given tasks (the tower and the outer works). Even though those two seem the same, it might beckon a look at if that's really the case for us!</p>
 
 </div>
 </div>
@@ -859,7 +859,7 @@ Waterloo SD: 17.767572134525178
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Anyone see what I'm seeing! It's far harder to stand out as an offensive robot in California, even if you were to remove the extreme elite. It's easy to see that from how even teams are in offense at the top around here and how we have less of a standard deviation amongst our elite even though the means are in the same ballpark in the more competitive regionals! This means that regionals we compete at are won much more strategically than what is traditional in other regions. Given that, we don't want to be in a position where we can score fairly well, but not enough to stand out and fall in a position where we don't control our own fate! So what to do?</p>
+<p>Anyone see what I'm seeing! It's far harder to stand out as an offensive robot in California, even if you were to remove the extreme elite. It's easy to see that from how even teams are in offense at the top around here and how we have less of a standard deviation amongst our elite, but the averages are in the same ballpark for the more competitive regionals! This means that regionals we wil compete at are won much more strategically than what is traditional in other regions. Given that, we don't want to be in a position where we can score fairly well, but not enough to stand out and fall in a position where we don't control our own fate! So what to do?</p>
 
 </div>
 </div>
@@ -1050,7 +1050,7 @@ Waterloo SD: 17.767572134525178
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>This new ranking system gave not so elite teams like 4161 and 2984 a fighting chance. Not to mention like balancing, finishing the breaches is a fair amount of points! Now let's double the CP, since we have twice as many extra ranking points available! By the way, the doubling of the CP is a fair assumption due to the consistency of random variables across the indepedendent stochastic processes.</p>
+<p>This new ranking system gave not so elite teams like 4161 and 2984 a fighting chance. Not to mention like balancing, finishing the breaches is a fair amount of points even come to eliminations. You score extra ranking points while still putting up solid numbers in eliminations. Now let's double the CP, since we have twice as many extra ranking points available! By the way, the doubling of the CP is a fair assumption due to the consistency of random variables across the indepedendent stochastic processes.</p>
 
 </div>
 </div>
@@ -1242,7 +1242,7 @@ Waterloo SD: 17.767572134525178
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Holy Shit! Teams with very mediocre record start to find themselves extremely well ranked compared to teams that won a ton of matches, but failed to get the Coopertition bridge. It really made a difference at moving tail end teams to the top. But more key is that teams switched places at the top. Huge alliance shifts! If you do more research, you'll see the higher CP teams ended up doing better throughout the year! More room for improvement and a sign of overall smarter play. Now teams that had weaker performances in shooting basketballs have either to torch the field or build their own alliances. Now the field becomes suddenly much more flat. This should be key with big players like 254, 1323, 973, and 3970 at our first event. Outranking even one changes the entire dynamic! This means that since we play in a weak offensive area, we can start looking to find ourselves highly ranked to pick up potentially a better scorer ranked lower, or maybe even draw the attention of an higher seed. It might not be a bad idea to really key in on the breach points and make sure the tower goes down low even if it loses high points. (FYI) 294 could not shoot a single basket in LA in 2012. We got all the coopertition and bridge points as well as had the highets DPR. We ranked 3rd and picked up the second best shooter in 973 and snuck our way into the finals!</p>
+<p>Holy Shit! Teams with very mediocre record start to find themselves extremely well ranked compared to teams that won a ton of matches but failed to get the Coopertition bridge. It really made a difference at moving tail end teams to the top. But more key is that teams switched places at the top. Huge alliance shifts! If you do more research, you'll see the higher CP teams ended up doing better throughout the year! More room for improvement and a sign of overall smarter play. Now teams that had weaker performances in shooting basketballs have either to torch the field or build their own alliances and the field becomes suddenly much more flat. This should be key with big players like 254, 1323, 973, and 3970 at our first event. Outranking even one changes the entire dynamic! This means that since we play in a weak offensive area, we can start looking to find ourselves highly ranked to pick up potentially a better scorer ranked lower, or maybe even draw the attention of an higher seed. It might not be a bad idea to really key in on the breach points and make sure the tower goes down low even if it loses high points. (FYI) 294 could not shoot a single basket in LA in 2012. We got all the coopertition and bridge points as well as had the highets DPR. We ranked 3rd and picked up the second best shooter in 973 and snuck our way into the finals!</p>
 
 </div>
 </div>
@@ -1272,7 +1272,7 @@ Waterloo SD: 17.767572134525178
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>The aspect here is two fold. You want to be aggressive enough to find yourself at champs through stellar performance in the regional stage, but not sacrifice potential so that when you are playing against tougher competition. This means you have to find the optimal manner for your team to reach those goals, because the reality is trying to beat the best at their own game isn't always the fastest ways to the top. The following are going to be stories of five Californian teams which have made noise at the world stage, but definately not from traditional form of pounding dominance (but maybe they are now!)</p>
+<p>The aspect here is two fold. You want to be aggressive enough to find yourself at champs through stellar performance in the regional stage, but not sacrifice potential so that when you are playing against tougher competition you hold value. This means you have to find the optimal manner for your team to reach those goals, because the reality is trying to beat the best at their own game isn't always the fastest way to the top. The following are going to be stories of five Californian teams which have made noise at the world stage, but definately not from revered form of pounding dominance (but maybe they are now!)</p>
 
 </div>
 </div>
@@ -1292,7 +1292,7 @@ Waterloo SD: 17.767572134525178
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="1678">1678<a class="anchor-link" href="#1678">&#182;</a></h1><p>Definately the largest disruption in FIRST California in recent memory, and at the cream of the crop. But most didn't know they've been silently killing at the Davis Regional for the past few years. Why? They exceed ANYONE, and I mean ANYONE, right out of the gate at a week 1. They are usually already at 75% of full capacity right out of the gate, and driving enhancements and minor improvements become more doable because they always aim to have a simple but elegant machine out by week 5!</p>
+<h1 id="1678">1678<a class="anchor-link" href="#1678">&#182;</a></h1><p>Definately the largest disruption in FIRST California in recent memory, and at the cream of the crop. But most didn't know they've been silently killing at the Davis Regional for the past few years. Why? They exceed ANYONE, and I mean ANYONE, right out of the gate at a week 1 regional. They are usually already at 75% of full capacity right out of the gate, and driving enhancements and minor improvements become more doable because they always aim to have a simple but elegant machine out by week 5 of build season!</p>
 
 </div>
 </div>
@@ -1312,7 +1312,7 @@ Waterloo SD: 17.767572134525178
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="294">294<a class="anchor-link" href="#294">&#182;</a></h1><p>Yeah. I know this story the best, but it's a great example of what to do and what happens when you don't do it! In 2010, Beach Cities went from a second pick regional champ, to a second overall pick finalist, to the #1 seed in their divison and to go on and what was considered the impossible (beat a 469 that had NEVER lost for a Wold Championship). How'd they get that far? 294 has had the same drive train every year. Its been called outdated and archaic, but its purpose has never failed. If all hell breaks loose, DEFEND. It's imposible to move a 294 Drivetrain in when it's in low gear without more than 300lbs of force in a T-Bone, and it has never lost a head on battle in game. Also, even if our robot's behind, our drivers practice defending from week one. From that, we've developed the rest of the bot to get better and better over time, and design so there's always open oppurtunities to improve. Years we fail to do that, we fail (2013, 2015). Years we go back to basics, we wreck (2014).</p>
+<h1 id="294">294<a class="anchor-link" href="#294">&#182;</a></h1><p>Yeah. I know this story the best, but it's a great example of what to do and what happens when you don't do it! In 2010, Beach Cities went from a second pick regional champ, to a second overall pick finalist, to the #1 seed in their divison and to go on and what was considered the impossible (beat a 469 that had NEVER lost that year for a Wold Championship). How'd they get that far? 294 has had the same drive train every year. Its been called outdated and archaic, but its purpose has never failed. If all hell breaks loose, DEFEND. It's imposible to move a 294 Drivetrain in when it's in low gear without more than 300lbs of force in a T-Bone, and it has never lost a head on battle in game. Also, even if our robot's behind, our drivers practice defending from week one. From that, we've developed the rest of the bot to get better and better over time, and design so there's always open oppurtunities to improve. Years we fail to do that, we fail (2013, 2015). Years we go back to basics, we succeed (2014).</p>
 
 </div>
 </div>
@@ -1352,7 +1352,7 @@ Waterloo SD: 17.767572134525178
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Now, we need to figure out every possible way of playing the game, evaluate the difficulty and value the importance of each task, and come up with what we know we can do best (I'd do it with a built matrix for a Singular Value Decomposition dumped into a PCA). I like how a lot of the plans y'all came up with were safe and cautious, but the key here isn't to limit your abilites, but rather make sure every mechanism and piece has multiply safe uses (think 330, 1114). Draw inspiration from previous years (hint, this is basically 2010)! Get Stoked! Also, finalize robot plans by Sunday!</p>
+<p>Now, we need to figure out every possible way of playing the game, evaluate the difficulty and value the importance of each task, and come up with what we know we can do best (I'd do it with a built matrix for a Singular Value Decomposition dumped into a PCA). Those who tell you the numbers lie just aren't hearing them clearly. The best way to move forward is to come up with a completely objective and double blind system of analysis, and trust the system. I like how a lot of the plans y'all came up with were safe and cautious, but the key here isn't to limit your abilites, but rather make sure every mechanism and piece has multiply safe uses (think 330, 1114). Draw inspiration from previous years (hint, this is basically 2010)! Transaltion: Not sure being short and shooting high are mutually exclusive. Get Stoked! Also, finalize robot plans by Sunday!</p>
 
 </div>
 </div>
