--- a/assets/breaching.html
+++ b/assets/breaching.html
@@ -1332,7 +1332,7 @@ Waterloo SD: 17.767572134525178
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>The unifying story to learn from all of them is momentum! Pick one thing to live and die by, be the best at it, and define your place in the open market. In it's second year, 5499 could make or break its existance by living by that mantra. If you asked me three years ago which rookies would look strongest now, I would have said 5012 and 5124. (Whaddya know, a world champ, a regional, and a finalist amongst them). How did I know that? They both did one thing well!</p>
+<p>The unifying story to learn from all of them is momentum! Pick one thing to live and die by, be the best at it, and define your place in the open market. In it's second year, 5499 could make or break its existance by living by that mantra. If you asked me three years ago which rookies would look strongest now, I would have said 5012 and 5124. (Whaddya know, a world champ, two regionals, and a finalist amongst them). How did I know that? They both did one thing well!</p>
 
 </div>
 </div>
